Add Regression to check accuracy

--- a/train-model.ipynb
+++ b/train-model.ipynb
@@ -322,6 +322,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "https://github.com/ianmcloughlin/jupyter-teaching-notebooks/blob/master/models.ipynb\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accurancy or 'regression' of this model is:  0.9025487607456801\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn.linear_model as sklm\n",
+    "model = sklm.LinearRegression()\n",
+    "\n",
+    "model.fit(X, y)\n",
+    "accurancy = model.score(X, y)\n",
+    "\n",
+    "print(\"The accurancy or 'regression' of this model is: \", accurancy)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -346,8 +378,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a neural network with one neuron.\n",
-    "model = kr.models.Sequential()\n",
+    "# Create a model for neural network.\n",
+    "# model = kr.models.Sequential() - change to model above\n",
     "\n",
     "inputLayer = kr.Input(shape=(1,))\n",
     "hiddenLayer1 = kr.layers.Dense(50, activation=\"sigmoid\")(inputLayer)\n",
@@ -356,6 +388,10 @@
     "outputs = kr.layers.Dense(1,)(hiddenLayer3)\n",
     "model = kr.Model(inputLayer, outputs=outputs)\n",
     "\n",
+    "regressor = DecisionTreeRegressor();\n",
+    "regressor.fit(X, y);\n",
+    "\n",
+    "model = kr.Model(inputLayer, outputs=outputs)\n",
     "#model.add(kr.layers.Dense(3, activation=\"sigmoid\", kernel_initializer='ones', bias_initializer='zeros'))\n",
     "model.compile('adam', loss='mean_squared_error')"
    ]
